# StochProcQ

./: demo.py  pyproject.toml
example/: example.ipynb
html/stochprocq/: hidden_markov_model.html  hmm.html  index.html  measure.html  meta.html
html/stochprocq/Models/: index.html  renewal.html
src/stochprocq/: _utility.py  hmm.py  measure.py  meta.py
src/stochprocq/Models/: renewal.py
src/stochprocq/example/: example.py
